@startuml update-did-builder-dependencies
DIDUpdateBuilder *-- VerificationMethod
DIDUpdateBuilder *-- Service

class DIDUpdateBuilder {
   + static empty() : DIDUpdateBuilder
   + addVerificationMethod(verificationMethod: VerificationMethod) : DIDUpdateBuilder
   + removeVerificationMethod(id: String) : DIDUpdateBuilder
   + addService(service: Service) : DIDUpdateBuilder
   + removeService(id: String) : DIDUpdateBuilder
   + addAuthenticationMethod(authenticationMethod: VerificationMethod | String) : DIDUpdateBuilder
   + removeAuthenticationMethod(id: String) : DIDUpdateBuilder
   + addKeyAgreement(keyAgreement: VerificationMethod | String) : DIDUpdateBuilder
   + removeKeyAgreement(id: String) : DIDUpdateBuilder
   + addAssertionMethod(assertionMethod: VerificationMethod | String) : DIDUpdateBuilder
   + removeAssertionMethod(id: String) : DIDUpdateBuilder
   + addCapabilityDelegation(capabilityDelegation: VerificationMethod | String) : DIDUpdateBuilder
   + removeCapabilityDelegation(id: String) : DIDUpdateBuilder
   + addCapabilityInvocation(capabilityInvocation: VerificationMethod | String) : DIDUpdateBuilder
   + removeCapabilityInvocation(id: String) : DIDUpdateBuilder
   + toJSON() : Object
   + fromJSON(json: Object) : DIDUpdateBuilder
}


interface VerificationMethod {
   String id
   String controller
   String publicKeyMultibase
   String type
}

interface Service {
   String id
   String controller
   String serviceEndpoint
}
@enduml